Filled requirement sheet with REST, Command, CommandHandler, Aggregate, EventListener (partially for Subscriber and Product domain) Fixed build warnings (Base64Encoder and pom.xml for subscription and axon-commons) Removded redundant code from Proudct aggregate